# poetiq-arc-agi-solver

./: .env.test  .gitignore  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: conventional_branch_naming_checker.yaml  conventional_commit_check.yaml  gitguardian_checker.yaml
.requirements/: requirements-linux.txt  requirements-win.txt
arc_agi/: config.py  io.py  llm.py  sandbox.py  solve.py  solve_coding.py  solve_parallel_coding.py  types.py  utils.py
