[project]
name = "SIGMOID_SLM"
version = "0.1.0"
description = "Sigmoid approach to Poetiq Multi-Language Models for beating ARC-AGI-2 benchmarks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asynciolimiter==1.2.0",
    "litellm==1.78.2",
    "numpy==2.3.4",
    "python-dotenv==1.1.1",
    "scipy==1.16.3",
]
